# gentoomanager

./: .ansible-lint  .gitignore  .isort.cfg  .yamllint  AGENTS.md  CHANGELOG.md  Makefile  README.md  ansible.cfg  baremetal.txt  baremetal.txt.example  devfile.yaml  galaxy.yml  hypervisors.txt.example  inventory_generator.py  pyproject.toml  requirements.txt  requirements.yml  site.yml  test-requirements.txt
.github/workflows/: release.yml  tests.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: bench-compiler-pivot-table.yml  bench-crypto-ssh-botan.yml  bench-footnotes.yml  bench-octave.yml  bench-python-pivot-table.yml  bench-quality.yml  bench-versions.yml  community-repos-flag.yml  documentation-restructure.yml  eval-summary.yml  fix-python-config-discovery.yml  multiversion-bench.yml  nixos-bash-detection.yml  no-nonstandard-repos.yml  openssl-throughput.yml  provision-mold-linker.yml  provisioning-benchmark-fixes.yml  python-full-version-resolution.yml  remove-nonstandard-repos.yml  report-section-links.yml  split-report-pages.yml  version-resolution-compilers.yml  windows-go-rust.yml  (+1 more)
docs/: benchmarks.md  development.md  preparation.md  setup-access.md
inventory_generator_rs/: Cargo.toml
playbooks/: apply_portage_config.yml  collect_use_flags.yml  provision_benchmarks.yml  run_benchmarks.yml
scripts/: benchmark_dashboard.py  collapse_use_flags.py  download_benchmark_fixtures.py  generate_benchmark_images.py  generate_benchmark_report.py  generate_multifile_bench.py  provision_benchmarks.sh  run_benchmarks.sh  scoring_weights.yml  shellcheck_yaml_blocks.py
(+152 files in other folders)
