[project]
name = "local-gentoomanager"
version = "1.0.0"
description = "Ansible collection for managing Gentoo KVM virtual machines"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-ansible",
  "pytest-xdist",
  "molecule",
  "ansible-core>=2.15",
]
dev = [
  "local-gentoomanager[test]",
  "ruff",
  "ansible-lint",
]

[dependency-groups]
dev = [
  "pytest>=7.0",
  "pytest-ansible",
  "pytest-xdist",
  "molecule",
  "ansible-core>=2.15",
  "ruff",
  "ansible-lint",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "B006",  # mutable default argument — common in test helpers
  "UP007", # use X | Y for union types — requires Python 3.10+
  "UP006", # use built-in type aliases — requires 3.9+ and is stylistic
]

[tool.ruff.lint.per-file-ignores]
# Ansible plugins require DOCUMENTATION/EXAMPLES/RETURN before imports
"plugins/**/*.py" = ["E402"]
# Test helpers use sys.path manipulation before imports
"tests/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = ["-vvv", "-n", "2", "--log-level", "WARNING", "--color", "yes"]
filterwarnings = ["ignore:AnsibleCollectionFinder has already been configured"]
testpaths = ["tests"]
